Mozzi sound synthesis library for Arduino

NEWS
get the latest version from https://sensorium.github.io/Mozzi/

version 2016-09-16-11:54

aka v1.1.0

- added library.properties for Arduino 1.5+
- MozziGuts.cpp and .h, and mozzi_config.h: added STEREO_HACK config option, set it to true to try stereo output, also added Stereo_Hack exammple
- README - updated install instructions
- examples/Mozzi_Midi_Input, added note about rx pin for midi in rather than tx as shown on Arduino page.
- ADSR.h - now IDLE phase will always return 0.
- included ADC.h for Teensy 3+ in mozzi_analog.h and removed it from sketches - not sure why this didn't work before (maybe <> instead of "").


version_2015-05-11-20:23

aka v1.0.2

First (slightly edited) versioned release using GitHub release process.
Warning: This release and all previous versions of Mozzi run slow when using Arduino IDE versions greater than 1.0.5, at least on OSX, causing glitches on many of the included examples. Simple examples run OK, but until this is resolved, Arduino 1.0.5 is recommended.

- Tweaks and fixes, a couple of new simple demos..
- Fixed/updated python script for converting wavetables, fixed name back to char2mozzi.py
- Updated MIDI examples for newer MIDI library.
- Updated OverSample.h to take an additional termplate parameter to allow different numeric types.
- Removed library.properties file until the library folder stucture is updated to match the new Arduino library form, as it stopped it installing in new IDEs.



version_2014-08-09-14:15

Teensy 3.1 port, test release.


Extra libraries required:

- Timer library for Teensy 3.0 by Daniel Gilbert, from https://github.com/loglow/IntervalTimer

- ADC library by Pedro Villanueva, from http://github.com/pedvide/ADC.


Some of the differences for Teensy 3.1 which will affect users include:

- Audio output is on pin A14/DAC, in STANDARD or STANDARD_PLUS audio modes - these are identical on Teensy 3.1, as
	the output is via DAC rather than PWM.
	