@@ -1,3 +1,4 @@
+.DS_Store
 Mozzi-resources
 *.out
 *.ogg
