@@ -10,10 +10,11 @@
     format numbers, mtof() for converting midi note
     values to frequency, and xorshift96() for random numbers.
     
-    For this sketch to run smoothly on 16MHz Ateml boards, you need to edit
-    platform.txt (on OSX you can find it by searching in /Users/your_name/Library/Arduino15).
+    For this sketch to run better on 16MHz Ateml boards in Arduino versions later than 1.5,
+    edit platform.txt (on OSX you can find it by searching in /Users/your_name/Library/Arduino15).
     Search and replace -Os with -O2.  Save.  
     This tells the compiler to optimise for speed, instead of size.
+    However, some unwanted ticking sounds will still be audible, and it still runs faster when compiled with Arduino 1.0.5.
   
     Circuit: Audio output on digital pin 9 on a Uno or similar, or
     DAC/A14 on Teensy 3.1, or 
